--- a/test/index.html
+++ b/test/index.html
@@ -6,6 +6,7 @@
     <link rel="import" href="/base/component.html"/>
   </head>
   <body>
+    <jpka-smart-post id="post" model='{"body": "body"}'/>
   </body>
 </html>
 
