--- a/test/index.html
+++ b/test/index.html
@@ -3,10 +3,10 @@
 <html>
   <head>
     <script src="/base/node_modules/Polymer/polymer.min.js"></script>
-    <link rel="import" href="/base/component.html"/>
+    <link rel="import" href="/base/index.html"/>
   </head>
   <body>
-    <jpka-smart-post id="post" model='{"body": "body"}'/>
+    <smart-post id="post" model='{"body": "body"}'/>
   </body>
 </html>
 
