--- a/component.html
+++ b/component.html
@@ -1,14 +1,32 @@
-<element name="smart-post" attributes="model editable" style="display:inline-block;" onmouseover="editModeOn()" onmouseout="editModeOff()" >
+<element name="smart-post" attributes="model editable" onmouseover="editModeOn()" onmouseout="editModeOff()" >
   <template>
     <style>
+      @host {
+        * {
+          position: relative;
+          display: block;
+          width: 600px;
+          height: 400px;
+          margin: 10px;
+        }
+      }
       .body {
-        display: block;
-        width: 200px;
-        height: 200px;
-        border: 5px solid black;
         padding: 5px;
+        width: 586px;
+        height: 386px;
+        border: 2px solid black;
+      }
+      #remove {
+        position: absolute;
+        top: 0px;
+        right: 0px;
+        background: none;
+        border: none;
+        font-size: 15px;
+        cursor: pointer;
       }
     </style>  
+    <button id="remove">X</button>
     <div id="body" class="body"></div>
     <textarea id="editableBody" class="body" style="display:none;"></textarea>
   </template>
