--- a/component.html
+++ b/component.html
@@ -17,6 +17,7 @@
         border: 2px solid black;
       }
       #remove {
+        display: none;
         position: absolute;
         top: 0px;
         right: 0px;
