--- a/test/index.html
+++ b/test/index.html
@@ -6,7 +6,7 @@
     <link rel="import" href="/base/index.html"/>
   </head>
   <body>
-    <smart-post id="post" model="{'body': '#body'}"></smart-post>
+    <smart-post id="post" model="{'body': '#title\nsome text'}"></smart-post>
   </body>
 </html>
 
