--- a/component.html
+++ b/component.html
@@ -2,25 +2,31 @@
   <template>
     <style>
       @host {
-        * {
+        smart-post {
           position: relative;
           display: block;
           width: 600px;
-          height: 400px;
           margin: 10px;
+          border: 2px dashed black;
         }
       }
       .body {
         padding: 5px;
         width: 586px;
-        height: 386px;
-        border: 2px solid black;
+      }
+      #editableBody {
+        top: 0px;
+        left: 0px;
+        border: none;
       }
       button {
         position: absolute;
         background: none;
         border: none;
         cursor: pointer;
+      }
+      button:hover {
+        color: rgb(206, 26, 26);
       }
       #save {
         bottom: 5px;
