--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<element name="smart-post" attributes="model editable">
+<element name="smart-post" attributes="body editable">
   <template>
     <style>
       @host {
@@ -40,7 +40,7 @@
     </style>  
     <button id="remove" style="display:none;">X</button>
     <div id="body" class="body"></div>
-    <textarea id="editableBody" class="body" style="display:none;"></textarea>
+    <textarea id="editableBody" class="body" style="display:none;" value="{{ body }}"></textarea>
     <button id="save" style="display:none;">Save</button>
   </template>
   <script>
@@ -48,8 +48,6 @@
 module.exports=require('o1PFch');
 },{}],"o1PFch":[function(require,module,exports){
 module.exports = {
-  _model: {},
-
   ready: function() {
     var self = this;
     this.$.editableBody.addEventListener("keyup", function() {
@@ -59,18 +57,7 @@ module.exports = {
     this.$.remove.addEventListener("click", this.remove.bind(this));
     this.addEventListener("mouseover", this.editModeOn);
     this.addEventListener("mouseout", this.editModeOff);
-  },
-
-  set model(model) {
-    if (typeof model === "string") {
-      model = JSON.parse(model);
-    }
-    this._model = model;
-    this.$.editableBody.value = model.body;
     this.parseBody();
-  },
-  get model() {
-    return this._model;
   },
 
   set editable(flag) {
@@ -100,8 +87,14 @@ module.exports = {
     this.parseBody();
     this.onEditMode = false;
   },
+  bodyChanged: function() {
+    if (!this.onEditMode) {
+      this.parseBody();
+    }
+  },
   parseBody: function() {
     this.$.body.innerHTML = this.parse(this.$.editableBody.value);
+    this.dispatchEvent(new CustomEvent("update"));
   },
   remove: function() {
     if (!this.parentNode) return;
@@ -109,7 +102,6 @@ module.exports = {
     this.dispatchEvent(new CustomEvent("remove"));
   },
   save: function() {
-    this._model.body = this.$.editableBody.value;
     this.$.save.style.display = "none";
     this.dispatchEvent(new CustomEvent("save"));
   }
