--- a/component.html
+++ b/component.html
@@ -1,4 +1,4 @@
-<element name="smart-post" attributes="body editable">
+<element name="smart-post" attributes="model editable" on-mouseover="editModeOn" on-mouseout="editModeOff">
   <template>
     <style>
       @host {
@@ -38,10 +38,10 @@
         font-size: 15px;
       }
     </style>  
-    <button id="remove" style="display:none;">X</button>
+    <button id="remove" style="display:none;" on-click="remove">X</button>
     <div id="body" class="body"></div>
-    <textarea id="editableBody" class="body" style="display:none;" value="{{ body }}"></textarea>
-    <button id="save" style="display:none;">Save</button>
+    <textarea id="editableBody" class="body" style="display:none;" value="{{model.body}}" on-keyup="showSaveButton"></textarea>
+    <button id="save" style="display:none;" on-click="save">Save</button>
   </template>
   <script>
     @@script
