--- a/test/index.html
+++ b/test/index.html
@@ -6,12 +6,11 @@
     <link rel="import" href="/base/index.html"/>
   </head>
   <body>
-    <smart-post id="post"></smart-post>
+  <!--<smart-post id="post" model="{'body': '#title\nHolis'}"></smart-post>-->
     <script>
-      window.addEventListener("WebComponentsReady", function() {
+      /*window.addEventListener("WebComponentsReady", function() {
         document.querySelector("#post").editable = true;
-        document.querySelector("#post").body = "#title\nsome text";
-      });
+      });*/
     </script>
   </body>
 </html>
