--- a/test/index.html
+++ b/test/index.html
@@ -6,11 +6,11 @@
     <link rel="import" href="/base/index.html"/>
   </head>
   <body>
-  <!--<smart-post id="post" model="{'body': '#title\nHolis'}"></smart-post>-->
+    <smart-post id="post" model="{'body': '#title\nHolis'}"></smart-post>
     <script>
-      /*window.addEventListener("WebComponentsReady", function() {
+      window.addEventListener("WebComponentsReady", function() {
         document.querySelector("#post").editable = true;
-      });*/
+      });
     </script>
   </body>
 </html>
