added fixed attr

--- a/component.html
+++ b/component.html
@@ -1,4 +1,4 @@
-<element name="smart-post" attributes="model editable" on-mouseover="editModeOn" on-mouseout="editModeOff">
+<element name="smart-post" attributes="model editable fixed" on-mouseover="editModeOn" on-mouseout="editModeOff">
   <template>
     <style>
       @host {
