--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<element name="smart-post" attributes="model editable" on-mouseover="editModeOn" on-mouseout="editModeOff">
+<element name="smart-post" attributes="model editable fixed" on-mouseover="editModeOn" on-mouseout="editModeOff">
   <template>
     <style>
       @host {
@@ -54,15 +54,19 @@ module.exports = {
   },
 
   set editable(flag) {
-    if (flag) {
-      this.$.remove.style.display = "block";
-    } else {
-      this.$.remove.style.display = "none";
-    }
     this._editable = flag;
+    this.updateRemoveButton();
   },
   get editable() {
-    return this._editable;
+    return this._editable || null;
+  },
+
+  set fixed(flag) {
+    this._fixed = flag;
+    this.updateRemoveButton();
+  },
+  get fixed() {
+    return this._fixed || null;
   },
 
   set model(model) {
@@ -81,6 +85,9 @@ module.exports = {
     return this._model;
   },
 
+  updateRemoveButton: function() {
+    this.$.remove.style.display = this.editable && !this.fixed ? "block" : "none";
+  },
   observeModel: function() {
     var key;
 
