--- a/component.html
+++ b/component.html
@@ -6,18 +6,20 @@
           position: relative;
           display: block;
           width: 600px;
-          margin: 10px;
+          margin: 20px;
           border: 2px dashed black;
         }
       }
       .body {
         padding: 5px;
         width: 586px;
+        min-height: 3.5em;
       }
       #editableBody {
         top: 0px;
         left: 0px;
         border: none;
+        height: 3.5em;
       }
       button {
         position: absolute;
@@ -40,7 +42,7 @@
     </style>  
     <button id="remove" style="display:none;" on-click="remove">X</button>
     <div id="body" class="body"></div>
-    <textarea id="editableBody" class="body" style="display:none;" value="{{model.body}}" on-keyup="showSaveButton"></textarea>
+    <textarea id="editableBody" class="body" style="display:none;" value="{{model.body}}"></textarea>
     <button id="save" style="display:none;" on-click="save">Save</button>
   </template>
   <script>
