Some more refactor

--- a/index.html
+++ b/index.html
@@ -50,45 +50,29 @@
         transition: opacity 1s;
       }
     </style>
-    <button id="remove" style="display:none;" on-click="remove">X</button>
+    <button id="remove" on-click="remove" hidden?="{{!editable || fixed}}">X</button>
     <div class="clear"></div>
     <h1 id="title" class="updeatable" contentEditable="{{onEditMode}}" on-keyup="updateTitle" on-keydown="preventNewLine" on-focusout="editModeOff" on-transitionend="titleTransitionEnded"></h1>
     <div id="bodyContainer">
-      <div id="body" class="body updeatable" on-transitionend="bodyTransitionEnded"></div>
-      <textarea id="editableBody" class="body" style="display:none;" value="{{model.body}}" on-focusout="editModeOff"></textarea>
+      <div id="body" class="body updeatable" on-transitionend="bodyTransitionEnded" hidden?="{{onEditMode}}"></div>
+      <textarea id="editableBody" class="body" value="{{model.body}}" on-focusout="editModeOff" hidden?="{{!onEditMode}}"></textarea>
     </div>
-    <button id="save" style="display:none;" on-click="save">Save</button>
+    <button id="save" on-click="save" hidden>Save</button>
     <div class="clear"></div>
   </template>
   <script>
     Polymer.register(this, {
+  fixed: false,
+  editable: false,
+
   ready: function() {
     var self = this;
     this._ready = true;
-    this.$.title.innerHTML = this.model.title;
+    this.$.title.textContent = this.model.title;
     this.parseBody();
   },
 
-  set editable(flag) {
-    this._editable = flag;
-    this.updateRemoveButton();
-  },
-  get editable() {
-    return this._editable || null;
-  },
-
-  set fixed(flag) {
-    this._fixed = flag;
-    this.updateRemoveButton();
-  },
-  get fixed() {
-    return this._fixed || null;
-  },
-
   set model(model) {
-    if (typeof model === "string") {
-      model = JSON.parse(model);
-    }
     this._model = model;
     this.observeModel();
   },
@@ -102,9 +86,6 @@
     return this._model;
   },
 
-  updateRemoveButton: function() {
-    this.$.remove.style.display = this.editable && !this.fixed ? "block" : "none";
-  },
   observeModel: function() {
     var self = this;
 
@@ -124,37 +105,36 @@
   parse: require("marked"),
   editModeOn: function() {
     if (!this.editable) return;
-    this.$.editableBody.style.display = "block"; 
     this.$.editableBody.style.height = (this.$.body.clientHeight) + "px"; 
-    this.$.body.style.display = "none"; 
     this.onEditMode = true;
   },
   editModeOff: function() {
     if (!this.onEditMode) return;
-    this.$.editableBody.style.display = "none"; 
-    this.$.body.style.display = "block";
     this.parseBody();
     this.onEditMode = false;
   },
   updateTitle: function() {
-    this.model.title = this.$.title.innerHTML;
+    while (this.$.title.firstElementChild) {
+      this.$.title.removeChild(this.$.title.firstElementChild);
+    }
+    this.model.title = this.$.title.textContent;
   },
   titleChanged: function(old) {
     if (!this._ready) return;
-    this.$.save.style.display = old && this.model.title && this.model.title !== "" ? "block" : "none";
+    this.$.save.hidden = !old || !this.model.title || this.model.title === "";
     if (!this.onEditMode) {
       this.$.title.style.opacity = 0;
     }
   },
   titleTransitionEnded: function() {
     if (this.$.title.style.opacity > 0) return;
-    this.$.title.innerHTML = this.model.title;
+    this.$.title.textContent = this.model.title;
     this.dispatchEvent(new CustomEvent("foreign:update:title"));
     this.$.title.style.opacity = 1;
   },
   bodyChanged: function(old) {
     if (!this._ready) return;
-    this.$.save.style.display = old && this.model.body && this.model.body !== "" ? "block" : "none";
+    this.$.save.hidden = !old || !this.model.body || this.model.body === "";
     if (!this.onEditMode) {
       this.$.body.style.opacity = 0;
     }
@@ -180,7 +160,7 @@
     this.fire("delete");
   },
   save: function() {
-    this.$.save.style.display = "none";
+    this.$.save.hidden = true;
     this.fire("save");
   },
   keyUp: function(e) {
