--- a/component.html
+++ b/component.html
@@ -50,14 +50,14 @@
         transition: opacity 1s;
       }
     </style>
-    <button id="remove" style="display:none;" on-click="remove">X</button>
+    <button id="remove" on-click="remove" hidden?="{{!editable || fixed}}">X</button>
     <div class="clear"></div>
     <h1 id="title" class="updeatable" contentEditable="{{onEditMode}}" on-keyup="updateTitle" on-keydown="preventNewLine" on-focusout="editModeOff" on-transitionend="titleTransitionEnded"></h1>
     <div id="bodyContainer">
-      <div id="body" class="body updeatable" on-transitionend="bodyTransitionEnded"></div>
-      <textarea id="editableBody" class="body" style="display:none;" value="{{model.body}}" on-focusout="editModeOff"></textarea>
+      <div id="body" class="body updeatable" on-transitionend="bodyTransitionEnded" hidden?="{{onEditMode}}"></div>
+      <textarea id="editableBody" class="body" value="{{model.body}}" on-focusout="editModeOff" hidden?="{{!onEditMode}}"></textarea>
     </div>
-    <button id="save" style="display:none;" on-click="save">Save</button>
+    <button id="save" on-click="save" hidden>Save</button>
     <div class="clear"></div>
   </template>
   <script>
