--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<element name="smart-post" attributes="model editable fixed onEditMode" on-dblclick="editModeOn" on-keyup="keyUp">
+<element name="smart-post" attributes="model editable fixed onEditMode" on-dblclick="editModeOn" on-keyup="keyUp" on-foreign:update:body="parseBody" on-foreign:update:title="updateTitle">
   <template>
     <style>
       @host {
@@ -52,7 +52,7 @@
     </style>
     <button id="remove" on-click="remove" hidden?="{{!editable || fixed}}">X</button>
     <div class="clear"></div>
-    <h1 id="title" class="updeatable" contentEditable="{{onEditMode}}" on-keyup="updateTitle" on-keydown="preventNewLine" on-focusout="editModeOff" on-transitionend="titleTransitionEnded"></h1>
+    <h1 id="title" class="updeatable" contentEditable="{{onEditMode}}" on-keyup="updateTitleModel" on-keydown="preventNewLine" on-focusout="editModeOff" on-transitionend="titleTransitionEnded"></h1>
     <div id="bodyContainer">
       <div id="body" class="body updeatable" on-transitionend="bodyTransitionEnded" hidden?="{{onEditMode}}"></div>
       <textarea id="editableBody" class="body" value="{{model.body}}" on-focusout="editModeOff" hidden?="{{!onEditMode}}"></textarea>
@@ -95,7 +95,6 @@
 
       observer = new PathObserver(self._model, key, function(inNew, inOld) {
         if (inNew === inOld) return;
-        console.log(key);
         if (typeof self[fname] === "function") self[fname](inOld);
       });
       Polymer.registerObserver(self, "property", key, observer);
@@ -113,22 +112,28 @@
     this.parseBody();
     this.onEditMode = false;
   },
-  updateTitle: function() {
+  updateTitleModel: function() {
     while (this.$.title.firstElementChild) {
       this.$.title.removeChild(this.$.title.firstElementChild);
     }
     this.model.title = this.$.title.textContent;
   },
+  updateTitle: function() {
+    this.$.title.textContent = this.model.title;
+  },
   titleChanged: function(old) {
     if (!this._ready) return;
     this.$.save.hidden = !old || !this.model.title || this.model.title === "";
     if (!this.onEditMode) {
-      this.$.title.style.opacity = 0;
+      if (this.style.display === "none") {
+        this.dispatchEvent(new CustomEvent("foreign:update:title"));
+      } else {
+        this.$.title.style.opacity = 0;
+      }
     }
   },
   titleTransitionEnded: function() {
     if (this.$.title.style.opacity > 0) return;
-    this.$.title.textContent = this.model.title;
     this.dispatchEvent(new CustomEvent("foreign:update:title"));
     this.$.title.style.opacity = 1;
   },
@@ -136,12 +141,15 @@
     if (!this._ready) return;
     this.$.save.hidden = !old || !this.model.body || this.model.body === "";
     if (!this.onEditMode) {
-      this.$.body.style.opacity = 0;
+      if (this.style.display === "none") {
+        this.dispatchEvent(new CustomEvent("foreign:update:body"));
+      } else {
+        this.$.body.style.opacity = 0;
+      }
     }
   },
   bodyTransitionEnded: function() {
     if (this.$.body.style.opacity > 0) return;
-    this.parseBody();
     this.dispatchEvent(new CustomEvent("foreign:update:body"));
     this.$.body.style.opacity = 1;
   },
